<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.prototype.ditenun.ditenunuiprototype.activity.DescTenunActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/nama_ulos1"
            android:scaleType="fitXY"
            android:src="@drawable/bintangmaratur" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/nama_ulos1"
            android:textColor="@color/colorNavText"
            android:textSize="22sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <TextView
            android:id="@+id/textViewDetailBintangMaratur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:fontFamily="sans-serif"
            android:lineSpacingExtra="2sp"
            android:text="@string/detail_ulos1"
            android:textAlignment="viewStart"
            android:textColor="@color/colorNavText"
            android:textSize="16sp"
            android:typeface="sans" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true">

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_margin="5dp"
                android:background="@drawable/shape"
                android:backgroundTint="@color/cardview_light_background"
                android:text="@string/buttondesc1"
                android:textColor="@color/colorAccent" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:background="@color/colorAccent"
                android:text="@string/buttondesc2"
                android:textColor="@color/cardview_light_background" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
